@@ -287,7 +287,10 @@ unsigned int mmt_get_protocol_by_port_number(uint8_t proto,
         else if (MMT_PORT_MATCH(sport, dport, 1494) || MMT_PORT_MATCH(sport, dport, 2598)) return (PROTO_CITRIX); /* http://support.citrix.com/article/CTX104147 */
         else if (MMT_PORT_MATCH(sport, dport, 389)) return (PROTO_LDAP);
         else if (MMT_PORT_MATCH(sport, dport, 88)) return (PROTO_KERBEROS);
-        else if (MMT_PORT_MATCH(sport, dport, 554)) return (PROTO_RTSP); 
+        else if (MMT_PORT_MATCH(sport, dport, 554)) return (PROTO_RTSP);
+        else if (MMT_PORT_MATCH(sport, dport, 5900)) return (PROTO_VNC);
+        else if (MMT_PORT_MATCH(sport, dport, 5901)) return (PROTO_VNC);
+        else if (MMT_PORT_MATCH(sport, dport, 5800)) return (PROTO_VNC); 
     }
 
     return (PROTO_UNKNOWN);
@@ -317,7 +320,10 @@ unsigned int mmt_guess_protocol_by_port_number(ipacket_t * ipacket) {
         else if (MMT_PORT_MATCH(sport, dport, 445)) return (PROTO_SMB);
         else if (MMT_PORT_MATCH(sport, dport, 389)) return (PROTO_LDAP);
         else if (MMT_PORT_MATCH(sport, dport, 88)) return (PROTO_KERBEROS);
-        else if (MMT_PORT_MATCH(sport, dport, 554)) return (PROTO_RTSP); 
+        else if (MMT_PORT_MATCH(sport, dport, 554)) return (PROTO_RTSP);
+        else if (MMT_PORT_MATCH(sport, dport, 5900)) return (PROTO_VNC);
+        else if (MMT_PORT_MATCH(sport, dport, 5901)) return (PROTO_VNC);
+        else if (MMT_PORT_MATCH(sport, dport, 5800)) return (PROTO_VNC);  
     } else if(packet->udp) {
         sport = htons(packet->udp->source);
         dport = htons(packet->udp->dest);
